[workspace.package]
name = "UnbreakEdit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "src/backend_common",
    "src/backend_ffmpeg",
    "src/backend_gstreamer",
    "src/ui_common",
    "src/ui_iced",
    "src/ui_slint",
]

[workspace.dependencies]
iced = { version = "0.10" }
slint = { version = "1.2" }



