[workspace.package]
name = "UnbreakEdit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "src/backend_common",
    "src/backend_ffmpeg",
    "src/backend_gstreamer",
    "src/ui_common",
    "src/ui_iced",
    "src/ui_slint",
]

[workspace.dependencies]

backend_common = { path = "src/backend_common" }
backend_ffmpeg = { path = "src/backend_ffmpeg" }
backend_gstreamer = { path = "src/backend_gstreamer" }
ui_common = { path = "src/ui_common" }
ui_iced = { path = "src/ui_iced" }
ui_slint = { path = "src/ui_slint" }

iced = { version = "0.10" }
slint = { version = "1.2" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
url = "2" # media uri

# backend_gstreamer
gstreamer = "0.21" 
gstreamer-app = "0.21" # appsink 
glib = "0.18" # gobject traits and error type
num-rational = "0.4"


