[package]
name = "backend_gstreamer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_common = { workspace = true }

gstreamer = { workspace = true }
gstreamer-app = { workspace = true } 
glib = { workspace = true }
num-rational = { workspace = true }
url = { workspace = true }