[package]
name = "ui_iced"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui_common = { workspace = true }
backend_gstreamer = { workspace = true }

iced = { workspace = true, features = ["advanced", "image", "lazy"]}
url = { workspace = true }
